# kepler-research-pro

./: .gitignore  README.md  kep_main.py  main.py  pyproject.toml
input_files/: ktwo201375481-c101_lpd-targ.fits  ktwo229151988-c101_lpd-targ.fits
noise_fns/: equal_mask.py  equal_mask_sig_clip_2.py  equal_mask_sig_clip_3.py  equal_pixel.py  equal_pixel_sig_clip_2.py  equal_pixel_sig_clip_3.py  random_mask.py  random_mask_sig_clip_2.py  random_mask_sig_clip_3.py
