[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["rushil <rushil0195@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.12"
pyketools = "^3.1.0"
joblib = "^1.0.0"
matplotlib = "3.1"
MDP = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
